added automatic saving of best model

--- a/scar.ipynb
+++ b/scar.ipynb
@@ -4,6 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Function to change auto indent to tab instead of 4 spaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "\n",
+    "IPython.tab_as_tab_everywhere = function(use_tabs) {\n",
+    "    if (use_tabs === undefined) {\n",
+    "        use_tabs = true; \n",
+    "    }\n",
+    "\n",
+    "    // apply setting to all current CodeMirror instances\n",
+    "    IPython.notebook.get_cells().map(\n",
+    "        function(c) {  return c.code_mirror.options.indentWithTabs=use_tabs;  }\n",
+    "    );\n",
+    "    // make sure new CodeMirror instances created in the future also use this setting\n",
+    "    CodeMirror.defaults.indentWithTabs=use_tabs;\n",
+    "\n",
+    "    };\n",
+    "\n",
+    "IPython.tab_as_tab_everywhere()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Install dependencies"
    ]
   },
@@ -29,7 +61,9 @@
    "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "import tensorflow as tf\n",
+    "tf.get_logger().setLevel('ERROR')"
    ]
   },
   {
@@ -93,7 +127,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
     "import tf_metrics\n",
     "from tensorflow.core.util import event_pb2\n",
     "from tensorflow.python.lib.io import tf_record\n",
@@ -101,22 +134,6 @@
     "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
     "import sklearn.preprocessing as preprocessing\n",
     "from imblearn import over_sampling, under_sampling, combine"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Suppress tensorflow warnings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.get_logger().setLevel('ERROR')"
    ]
   },
   {
@@ -132,9 +149,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "USE_SCICITE = False\n",
-    "USE_ACLARC = False\n",
-    "USE_PATTERN_EMBEDDING = False\n",
+    "USE_SCICITE = True\n",
+    "USE_ACLARC = True\n",
+    "USE_PATTERN_EMBEDDING = True\n",
     "USE_TEST_SET = False\n",
     "\n",
     "ZERO_CLASS = 'none'\n",
@@ -289,7 +306,7 @@
     "\t\t\tdf['main_predicate'] = df['anchorsent']\n",
     "\t\t# Embed anchor sentences\n",
     "\t\t#df['anchorsent'] = list(df['anchorsent'])\n",
-    "\t\tcache_file = f'{TF_MODEL}.{key}.anchorsent.embedding_cache.pkl'\n",
+    "\t\tcache_file = f'cache/{TF_MODEL}.{key}.anchorsent.embedding_cache.pkl'\n",
     "\t\tif os.path.isfile(cache_file):\n",
     "\t\t\twith open(cache_file, 'rb') as f:\n",
     "\t\t\t\tembedded_sentences_dict = pickle.load(f)\n",
@@ -302,7 +319,7 @@
     "\t\tdf['anchorsent_embedding'] = embedded_sentences\n",
     "\t\t# Embed extra info\n",
     "\t\tif USE_PATTERN_EMBEDDING:\n",
-    "\t\t\tcache_file = f'{TF_MODEL}.{key}.extra.embedding_cache.pkl'\n",
+    "\t\t\tcache_file = f'cache/{TF_MODEL}.{key}.extra.embedding_cache.pkl'\n",
     "\t\t\tif os.path.isfile(cache_file):\n",
     "\t\t\t\twith open(cache_file, 'rb') as f:\n",
     "\t\t\t\t\tembedded_extra_dict = pickle.load(f)\n",
@@ -584,6 +601,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Define function for training and evaluating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_and_evaluate(config, trainset, testset, num_epochs, batch_size, max_steps, model_dir, feature_columns, n_classes):\n",
+    "    # Create a custom estimator using model_fn to define the model\n",
+    "    tf.logging.info(\"Before classifier construction\")\n",
+    "    run_config = tf.estimator.RunConfig(\n",
+    "        model_dir=model_dir,\n",
+    "        #save_checkpoints_secs=EVALUATION_SECONDS, \n",
+    "        save_checkpoints_steps=EVALUATION_STEPS,\n",
+    "        keep_checkpoint_max=1,\n",
+    "    )\n",
+    "    estimator = tf.estimator.Estimator(\n",
+    "        model_fn=build_model_fn(feature_columns, n_classes, config),\n",
+    "        config=run_config,\n",
+    "    )\n",
+    "    tf.logging.info(\"...done constructing classifier\")\n",
+    "\n",
+    "    # Build train input callback\n",
+    "    train_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
+    "        x=trainset['x'],\n",
+    "        y=trainset['y'],\n",
+    "        num_epochs=num_epochs,\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=True\n",
+    "    )\n",
+    "    # Build train specifics\n",
+    "    train_spec = tf.estimator.TrainSpec(\n",
+    "        input_fn=train_input_fn, \n",
+    "        max_steps=max_steps\n",
+    "    )\n",
+    "    # Build test input callback\n",
+    "    test_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
+    "        x=testset['x'],\n",
+    "        y=testset['y'],\n",
+    "        num_epochs=1,\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=False\n",
+    "    )\n",
+    "    # Build best_exporter\n",
+    "    feature_spec = tf.feature_column.make_parse_example_spec(feature_columns)\n",
+    "    exporter = tf.estimator.BestExporter(\n",
+    "        name=\"best_exporter\",\n",
+    "        serving_input_receiver_fn=tf.estimator.export.build_parsing_serving_input_receiver_fn(feature_spec),\n",
+    "        exports_to_keep=1 # this will keep the N best checkpoints\n",
+    "    )\n",
+    "    # Build eval specifics\n",
+    "    eval_spec = tf.estimator.EvalSpec(\n",
+    "        input_fn=test_input_fn, \n",
+    "        steps=EVALUATION_STEPS, \n",
+    "        start_delay_secs=0, \n",
+    "        throttle_secs=0,\n",
+    "        exporters=[exporter],\n",
+    "    )\n",
+    "\n",
+    "    tf.estimator.train_and_evaluate(estimator, train_spec, eval_spec)\n",
+    "    return estimator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Define function for extracting summaries (statistics) from tensorboard events"
    ]
   },
@@ -593,24 +679,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_document_list(directory):\n",
-    "\tdoc_list = []\n",
-    "\tfor obj in os.listdir(directory):\n",
-    "\t\tobj_path = os.path.join(directory, obj)\n",
-    "\t\tif os.path.isfile(obj_path):\n",
-    "\t\t\tdoc_list.append(obj_path)\n",
-    "\t\telif os.path.isdir(obj_path):\n",
-    "\t\t\tdoc_list.extend(get_document_list(obj_path))\n",
-    "\treturn doc_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_summary_results(summary_dir):\n",
+    "\tdef get_document_list(directory):\n",
+    "\t\tdoc_list = []\n",
+    "\t\tfor obj in os.listdir(directory):\n",
+    "\t\t\tobj_path = os.path.join(directory, obj)\n",
+    "\t\t\tif os.path.isfile(obj_path):\n",
+    "\t\t\t\tdoc_list.append(obj_path)\n",
+    "\t\t\telif os.path.isdir(obj_path):\n",
+    "\t\t\t\tdoc_list.extend(get_document_list(obj_path))\n",
+    "\t\treturn doc_list\n",
+    "    \n",
     "\tdef my_summary_iterator(path):\n",
     "\t\tfor r in tf_record.tf_record_iterator(path):\n",
     "\t\t\tyield event_pb2.Event.FromString(r)\n",
@@ -619,7 +698,7 @@
     "\tdocument_list = get_document_list(summary_dir)\n",
     "\t#print(document_list)\n",
     "\tfor filename in document_list:\n",
-    "\t\tprint(filename)\n",
+    "\t\t#print(filename)\n",
     "\t\tif not os.path.basename(filename).startswith('events.'):\n",
     "\t\t\tcontinue\n",
     "\t\tvalue_dict = {}\n",
@@ -637,86 +716,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define function for training and evaluating"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_and_evaluate(config, trainset, testset, num_epochs, batch_size, max_steps, model_dir, feature_columns, n_classes):\n",
-    "\t# Create a custom estimator using model_fn to define the model\n",
-    "\ttf.logging.info(\"Before classifier construction\")\n",
-    "\trun_config = tf.estimator.RunConfig(\n",
-    "\t\tmodel_dir=model_dir,\n",
-    "\t\t#save_checkpoints_secs=EVALUATION_SECONDS, \n",
-    "\t\tsave_checkpoints_steps=EVALUATION_STEPS,\n",
-    "\t\t#keep_checkpoint_max=3,\n",
-    "\t)\n",
-    "\testimator = tf.estimator.Estimator(\n",
-    "\t\tmodel_fn=build_model_fn(feature_columns, n_classes, config),\n",
-    "\t\tconfig=run_config,\n",
-    "\t)\n",
-    "\ttf.logging.info(\"...done constructing classifier\")\n",
-    "\n",
-    "\t# Build train input callback\n",
-    "\ttrain_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
-    "\t\tx=trainset['x'],\n",
-    "\t\ty=trainset['y'],\n",
-    "\t\tnum_epochs=num_epochs,\n",
-    "\t\tbatch_size=batch_size,\n",
-    "\t\tshuffle=True\n",
-    "\t)\n",
-    "\t# Build test input callback\n",
-    "\ttest_input_fn = tf.estimator.inputs.numpy_input_fn(\n",
-    "\t\tx=testset['x'],\n",
-    "\t\ty=testset['y'],\n",
-    "\t\tnum_epochs=1,\n",
-    "\t\tbatch_size=batch_size,\n",
-    "\t\tshuffle=False\n",
-    "\t)\n",
-    "\n",
-    "\ttrain_spec = tf.estimator.TrainSpec(input_fn=train_input_fn, max_steps=max_steps)\n",
-    "\teval_spec = tf.estimator.EvalSpec(input_fn=test_input_fn, steps=EVALUATION_STEPS, start_delay_secs=0, throttle_secs=0)\n",
-    "\n",
-    "\ttf.estimator.train_and_evaluate(estimator, train_spec, eval_spec)\n",
-    "\treturn estimator"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Define function for plotting summary results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_summary_results(summary_results):\n",
-    "\tplt.clf()\n",
-    "\tplt_height = len(summary_results)\n",
-    "\t_, axes = plt.subplots(nrows=plt_height, sharex=True, figsize=(14,15*plt_height))\n",
-    "\tfor e, (stat, value_list) in enumerate(summary_results.items()):\n",
-    "\t\tax = axes[e]\n",
-    "\t\t#ax.set_ylim([0, 1])\n",
-    "\t\t#ax.set_yticks(value_list)\n",
-    "\t\tstep_list,value_list=zip(*value_list)\n",
-    "\t\tax.plot(step_list, value_list)\n",
-    "\t\tax.set(xlabel='step', ylabel=stat)\n",
-    "\t\tax.grid()\n",
-    "\tplt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Define function for cross-validating the model"
    ]
   },
@@ -727,6 +726,35 @@
    "outputs": [],
    "source": [
     "def cross_validate_model(config, feature_columns, n_classes):\n",
+    "\tdef get_best_estimator(model_dir):\n",
+    "\t\texporter_dir = os.path.join(model_dir,'export','best_exporter')\n",
+    "\t\tbest_model_name = os.listdir(exporter_dir)[0]\n",
+    "\t\tbest_model_path = os.path.join(exporter_dir, best_model_name)\n",
+    "\t\tif not os.path.exists(best_model_path):\n",
+    "\t\t\treturn None\n",
+    "\t\treturn tf.estimator.Estimator(\n",
+    "\t\t\tmodel_fn=build_model_fn(feature_columns, n_classes, config),\n",
+    "\t\t\twarm_start_from=best_model_path,\n",
+    "\t\t)\n",
+    "\n",
+    "\tdef save_prediction_results(path, datalist, estimator):\n",
+    "\t\tif estimator is None:\n",
+    "\t\t\treturn\n",
+    "\t\tdataset = dictify_datalist(datalist)\n",
+    "\t\tinput_fn = tf.estimator.inputs.numpy_input_fn(x=dataset['x'], y=dataset['y'], shuffle=False)\n",
+    "\t\tdataset['x']['probabilities'] = list(map(lambda x: x['probabilities'], estimator.predict(input_fn)))\n",
+    "\t\txs,ys = zip(*listify_dataset(dataset))\n",
+    "\t\txs = [\n",
+    "\t\t\t{\n",
+    "\t\t\t\tk: v.tolist() if type(v) in [np.array,np.ndarray] else v\n",
+    "\t\t\t\tfor k,v in x\n",
+    "\t\t\t\tif k in ['anchorsent','probabilities']\n",
+    "\t\t\t}\n",
+    "\t\t\tfor x in xs\n",
+    "\t\t]\n",
+    "\t\twith open(path,'w') as f:\n",
+    "\t\t\tjson.dump(xs, f, indent=4)\n",
+    "\n",
     "\t# Perform k-fold cross-validation\n",
     "\tfeature_set = set(f.key for f in feature_columns)\n",
     "\tcross_validation = KFold(n_splits=config[\"N_SPLITS\"], shuffle=True, random_state=1)\n",
@@ -762,26 +790,12 @@
     "\t\t\tfeature_columns=feature_columns, \n",
     "\t\t\tn_classes=n_classes\n",
     "\t\t)\n",
+    "\n",
+    "\t\tbest_estimator = get_best_estimator(model_dir)\n",
+    "\t\tsave_prediction_results(os.path.join(model_dir,'trainset_predictions.json'), trainlist, best_estimator)\n",
+    "\t\tsave_prediction_results(os.path.join(model_dir,'testset_predictions.json'), testlist, best_estimator)\n",
     "        \n",
-    "\t\tdataset = dictify_datalist(datalist)\n",
-    "\t\tinput_fn = tf.estimator.inputs.numpy_input_fn(\n",
-    "\t\t\tx=dataset['x'],\n",
-    "\t\t\ty=dataset['y'],\n",
-    "\t\t\tshuffle=False,\n",
-    "\t\t)\n",
-    "\t\tdataset['x']['probabilities'] = list(map(lambda x: x['probabilities'], estimator.predict(input_fn)))\n",
-    "\t\txs,ys = zip(*listify_dataset(dataset))\n",
-    "\t\txs = [\n",
-    "\t\t\t{\n",
-    "\t\t\t\tk: v.tolist() if type(v) in [np.array,np.ndarray] else v\n",
-    "\t\t\t\tfor k,v in x\n",
-    "\t\t\t\tif k in ['anchorsent','probabilities']\n",
-    "\t\t\t}\n",
-    "\t\t\tfor x in xs\n",
-    "\t\t]\n",
-    "\t\twith open(os.path.join(model_dir,'prediction.json'),'w') as f:\n",
-    "\t\t\tjson.dump(xs, f, indent=4)\n",
-    "\t\tyield model_dir # iterator"
+    "\t\tyield get_summary_results(os.path.join('.',model_dir,'eval'))[-1]['results'] # iterator"
    ]
   },
   {
@@ -813,10 +827,10 @@
     "\t\treturn best_stat_dict\n",
     "            \n",
     "\tdef ray_cross_validate_model(config, reporter):\n",
+    "\t\twarnings.filterwarnings('ignore')\n",
+    "\t\ttf.get_logger().setLevel('ERROR')\n",
     "\t\tsummary_results_list = []\n",
-    "\t\tfor e,model_dir in enumerate(cross_validate_model(config,feature_columns,n_classes)):\n",
-    "\t\t\tsummary_results = get_summary_results(f'./{model_dir}/eval')\n",
-    "\t\t\tsummary_results = summary_results[-1]['results']\n",
+    "\t\tfor e,summary_results in enumerate(cross_validate_model(config,feature_columns,n_classes)):\n",
     "\t\t\tsummary_results_list.append(summary_results)\n",
     "\t\t\tprint(f'Test-set {e} results:', summary_results)\n",
     "\t\t\tbest_stat_dict = get_best_stat_dict(summary_results_list)\n",
@@ -985,6 +999,7 @@
     "    resume=os.path.isdir(os.path.join(local_dir,experiment_name)),\n",
     "    #global_checkpoint_period=15*60,\n",
     "    #keep_checkpoints_num=3,\n",
+    "    verbose=1, # 0, 1, or 2. Verbosity mode. 0 = silent, 1 = only status updates, 2 = status and trial results.\n",
     "    config={ \n",
     "        \"N_SPLITS\": tune.grid_search([\n",
     "            #3,\n",
