fixed duplicates removal

--- a/scar.ipynb
+++ b/scar.ipynb
@@ -9,9 +9,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "IPython.tab_as_tab_everywhere = function(use_tabs) {\n",
+       "    if (use_tabs === undefined) {\n",
+       "        use_tabs = true; \n",
+       "    }\n",
+       "\n",
+       "    // apply setting to all current CodeMirror instances\n",
+       "    IPython.notebook.get_cells().map(\n",
+       "        function(c) {  return c.code_mirror.options.indentWithTabs=use_tabs;  }\n",
+       "    );\n",
+       "    // make sure new CodeMirror instances created in the future also use this setting\n",
+       "    CodeMirror.defaults.indentWithTabs=use_tabs;\n",
+       "\n",
+       "    };\n",
+       "\n",
+       "IPython.tab_as_tab_everywhere()\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "\n",
@@ -198,8 +226,7 @@
     "\t\t'probabilities': feature_name, \n",
     "\t\t'string': 'anchorsent',\n",
     "\t})\n",
-    "\tdf = df.set_index('anchorsent').join(extra_df.set_index('anchorsent'), on='anchorsent')\n",
-    "\tdf = df.reset_index().rename(columns={'index': 'anchorsent'})\n",
+    "\tdf = pd.merge(extra_df, df, on='anchorsent', how='inner', sort=True).drop_duplicates(subset=['anchorsent'])\n",
     "\tclass_size = max(map(lambda x: len(x), filter(lambda x: type(x) in [list,tuple,np.array,np.ndarray], df[feature_name].to_list())))\n",
     "\tprint(f'{model_name} has class size {class_size}')\n",
     "\tdf[feature_name] = df[feature_name].map(lambda x: np.zeros(class_size)+1/class_size if not(type(x) in [list,tuple,np.array] and len(x)== class_size) else x)\n",
@@ -261,6 +288,7 @@
     "\tprint(df)\n",
     "\t\n",
     "\t# Return dataset\n",
+    "\tdf.drop_duplicates(subset=['anchorsent'], inplace=True)\n",
     "\ty_list = df.pop('citfunc').values.tolist() # Extract target list\n",
     "\tfeature_list = df.columns.values.tolist()\n",
     "\tx_dict = {feature: df[feature].to_list() for feature in feature_list}\n",
