--- a/scar.ipynb
+++ b/scar.ipynb
@@ -9,37 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "IPython.tab_as_tab_everywhere = function(use_tabs) {\n",
-       "    if (use_tabs === undefined) {\n",
-       "        use_tabs = true; \n",
-       "    }\n",
-       "\n",
-       "    // apply setting to all current CodeMirror instances\n",
-       "    IPython.notebook.get_cells().map(\n",
-       "        function(c) {  return c.code_mirror.options.indentWithTabs=use_tabs;  }\n",
-       "    );\n",
-       "    // make sure new CodeMirror instances created in the future also use this setting\n",
-       "    CodeMirror.defaults.indentWithTabs=use_tabs;\n",
-       "\n",
-       "    };\n",
-       "\n",
-       "IPython.tab_as_tab_everywhere()\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%javascript\n",
     "\n",
@@ -183,13 +155,13 @@
     "USE_TEST_SET = False\n",
     "\n",
     "ZERO_CLASS = 'none'\n",
-    "LABELS_TO_EXCLUDE = [\n",
-    "\t#'cites',\n",
-    "\t'cites_as_review',\n",
-    "\t#'extends', \n",
-    "\t#'uses_data_from', \n",
-    "\t#'uses_method_in',\n",
-    "]\n",
+    "CITATION_INTENTS = set([\n",
+    "\t'cites',\n",
+    "\t'extends',\n",
+    "\t'uses_data_from',\n",
+    "\t'uses_method_in',\n",
+    "\t#'cites_as_review',\n",
+    "])\n",
     "\n",
     "TRAIN_EPOCHS = None\n",
     "MAX_STEPS = 10**4\n",
@@ -257,15 +229,15 @@
     "\tdf['citfunc'].replace(np.NaN, 'none', inplace=True)\n",
     "\tdf['citfunc'] = df['citfunc'].map(lambda x: x.strip())\n",
     "\t# Remove rows with excluded labels\n",
-    "\tfor label in LABELS_TO_EXCLUDE:\n",
-    "\t\tdf.loc[df.citfunc == label, 'citfunc'] = ZERO_CLASS\n",
+    "\tmask = [x not in CITATION_INTENTS for x in df.citfunc]\n",
+    "\tdf.loc[mask, 'citfunc'] = ZERO_CLASS\n",
     "\t# Remove bad rows\n",
     "\tdf['citfunc'].replace('ERROR', 'none', inplace=True)\n",
     "\tdf = df[df.citfunc != 'none']\n",
     "\n",
     "\t# Extract features from dataframe\n",
     "\tdf = df[['anchorsent','sectype','citfunc']]\n",
-    "\t\n",
+    "\n",
     "\t# Remove null values\n",
     "\tdf['anchorsent'].replace(np.NaN, '', inplace=True)\n",
     "\tdf = df[df.anchorsent != '']\n",
@@ -289,6 +261,8 @@
     "\t\n",
     "\t# Return dataset\n",
     "\tdf.drop_duplicates(subset=['anchorsent'], inplace=True)\n",
+    "\tfor citfunc in CITATION_INTENTS:\n",
+    "\t\tprint('Amount of {}: {}'.format(citfunc, len(df.loc[df['citfunc'] == citfunc])))\n",
     "\ty_list = df.pop('citfunc').values.tolist() # Extract target list\n",
     "\tfeature_list = df.columns.values.tolist()\n",
     "\tx_dict = {feature: df[feature].to_list() for feature in feature_list}\n",
